// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card tests should render the UI snapshot correctly 1`] = `
<div
  className="css-pgu20y"
  id="card-test-id-1"
>
  <div
    className="textBox css-0"
  >
    <h3
      aria-describedby="card-location-test-id-1"
      className="chakra-heading css-0"
    >
      <a
        className="css-0"
        href="https://www.nypl.org/"
        onClick={[Function]}
      >
        Test
      </a>
    </h3>
    <div
      className="details css-0"
    />
  </div>
  <div
    className="css-ys3583"
    id="card-image-test-id-1"
  >
    <a
      aria-label="Test-image"
      className="css-0"
      href="https://www.nypl.org/"
      id="card-image-link-test-id-1"
      onClick={[Function]}
      tabIndex={-1}
    >
      <div
        className="scout-nextjs-image"
        id="nextjsImage-card-image-test-id-1"
      >
        <span
          style={
            Object {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": "initial",
              "margin": 0,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 0,
              "position": "relative",
              "width": "initial",
            }
          }
        >
          <span
            style={
              Object {
                "background": "none",
                "border": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": "initial",
                "margin": 0,
                "opacity": 1,
                "padding": 0,
                "paddingTop": "50%",
                "width": "initial",
              }
            }
          />
          <img
            alt="image-1-alt-text"
            data-nimg="responsive"
            decoding="async"
            onError={[Function]}
            onLoad={[Function]}
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
          <noscript>
            <img
              alt="image-1-alt-text"
              data-nimg="responsive"
              decoding="async"
              loading="lazy"
              sizes="100vw"
              src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
              srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </noscript>
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`CardGrid tests should render the UI snapshot correctly 1`] = `
<div
  className="css-15j2i3p"
>
  <div
    className="css-1ngwrio"
  >
    <div
      className="css-hze00u"
    >
      <div
        className="css-1uxn9gx"
      >
        <h2
          className="chakra-heading css-18pkilg"
          id="component-wrapper-heading-card-grid-test-id"
        >
          <a
            className="css-0"
            href="https://nypl.com"
            id="component-wrapper-heading-link-card-grid-test-id"
            onClick={[Function]}
          >
            Test title
          </a>
        </h2>
      </div>
    </div>
    <div
      className="css-1y2jlch"
    >
      <ul
        className="css-lgj0h8"
      >
        <li
          className="css-155za0w"
          id="card-grid-item-test-id-1"
        >
          <div
            className="css-pgu20y"
            id="card-test-id-1"
          >
            <div
              className="textBox css-0"
            >
              <h3
                className="chakra-heading css-0"
              >
                <a
                  className="css-0"
                  href="https://www.nypl.org/"
                  onClick={[Function]}
                >
                  Test
                </a>
              </h3>
              <div
                className="details css-0"
              />
            </div>
            <div
              className="css-ys3583"
              id="card-image-test-id-1"
            >
              <a
                aria-label="Test-image"
                className="css-0"
                href="https://www.nypl.org/"
                id="card-image-link-test-id-1"
                onClick={[Function]}
                tabIndex={-1}
              >
                <div
                  className="scout-nextjs-image"
                  id="nextjsImage-card-image-test-id-1"
                >
                  <span
                    style={
                      Object {
                        "background": "none",
                        "border": 0,
                        "boxSizing": "border-box",
                        "display": "block",
                        "height": "initial",
                        "margin": 0,
                        "opacity": 1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "relative",
                        "width": "initial",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "background": "none",
                          "border": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": "initial",
                          "margin": 0,
                          "opacity": 1,
                          "padding": 0,
                          "paddingTop": "50%",
                          "width": "initial",
                        }
                      }
                    />
                    <img
                      alt="image-1-alt-text"
                      data-nimg="responsive"
                      decoding="async"
                      onError={[Function]}
                      onLoad={[Function]}
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style={
                        Object {
                          "border": "none",
                          "bottom": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": 0,
                          "left": 0,
                          "margin": "auto",
                          "maxHeight": "100%",
                          "maxWidth": "100%",
                          "minHeight": "100%",
                          "minWidth": "100%",
                          "objectFit": undefined,
                          "objectPosition": undefined,
                          "padding": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 0,
                        }
                      }
                    />
                    <noscript>
                      <img
                        alt="image-1-alt-text"
                        data-nimg="responsive"
                        decoding="async"
                        loading="lazy"
                        sizes="100vw"
                        src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                        srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                        style={
                          Object {
                            "border": "none",
                            "bottom": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "height": 0,
                            "left": 0,
                            "margin": "auto",
                            "maxHeight": "100%",
                            "maxWidth": "100%",
                            "minHeight": "100%",
                            "minWidth": "100%",
                            "objectFit": undefined,
                            "objectPosition": undefined,
                            "padding": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          }
                        }
                      />
                    </noscript>
                  </span>
                </div>
              </a>
            </div>
          </div>
        </li>
        <li
          className="css-155za0w"
          id="card-grid-item-test-id-2"
        >
          <div
            className="css-pgu20y"
            id="card-test-id-2"
          >
            <div
              className="textBox css-0"
            >
              <h3
                className="chakra-heading css-0"
              >
                <a
                  className="css-0"
                  href="https://www.nypl.org/"
                  onClick={[Function]}
                >
                  Test
                </a>
              </h3>
              <div
                className="details css-0"
              />
            </div>
            <div
              className="css-ys3583"
              id="card-image-test-id-2"
            >
              <a
                aria-label="Test-image"
                className="css-0"
                href="https://www.nypl.org/"
                id="card-image-link-test-id-2"
                onClick={[Function]}
                tabIndex={-1}
              >
                <div
                  className="scout-nextjs-image"
                  id="nextjsImage-card-image-test-id-2"
                >
                  <span
                    style={
                      Object {
                        "background": "none",
                        "border": 0,
                        "boxSizing": "border-box",
                        "display": "block",
                        "height": "initial",
                        "margin": 0,
                        "opacity": 1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "relative",
                        "width": "initial",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "background": "none",
                          "border": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": "initial",
                          "margin": 0,
                          "opacity": 1,
                          "padding": 0,
                          "paddingTop": "50%",
                          "width": "initial",
                        }
                      }
                    />
                    <img
                      alt="image-2-alt-text"
                      data-nimg="responsive"
                      decoding="async"
                      onError={[Function]}
                      onLoad={[Function]}
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style={
                        Object {
                          "border": "none",
                          "bottom": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": 0,
                          "left": 0,
                          "margin": "auto",
                          "maxHeight": "100%",
                          "maxWidth": "100%",
                          "minHeight": "100%",
                          "minWidth": "100%",
                          "objectFit": undefined,
                          "objectPosition": undefined,
                          "padding": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 0,
                        }
                      }
                    />
                    <noscript>
                      <img
                        alt="image-2-alt-text"
                        data-nimg="responsive"
                        decoding="async"
                        loading="lazy"
                        sizes="100vw"
                        src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                        srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                        style={
                          Object {
                            "border": "none",
                            "bottom": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "height": 0,
                            "left": 0,
                            "margin": "auto",
                            "maxHeight": "100%",
                            "maxWidth": "100%",
                            "minHeight": "100%",
                            "minWidth": "100%",
                            "objectFit": undefined,
                            "objectPosition": undefined,
                            "padding": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          }
                        }
                      />
                    </noscript>
                  </span>
                </div>
              </a>
            </div>
          </div>
        </li>
        <li
          className="css-155za0w"
          id="card-grid-item-test-id-3"
        >
          <div
            className="css-pgu20y"
            id="card-test-id-3"
          >
            <div
              className="textBox css-0"
            >
              <h3
                className="chakra-heading css-0"
              >
                <a
                  className="css-0"
                  href="https://www.nypl.org/"
                  onClick={[Function]}
                >
                  Test
                </a>
              </h3>
              <div
                className="details css-0"
              />
            </div>
            <div
              className="css-ys3583"
              id="card-image-test-id-3"
            >
              <a
                aria-label="Test-image"
                className="css-0"
                href="https://www.nypl.org/"
                id="card-image-link-test-id-3"
                onClick={[Function]}
                tabIndex={-1}
              >
                <div
                  className="scout-nextjs-image"
                  id="nextjsImage-card-image-test-id-3"
                >
                  <span
                    style={
                      Object {
                        "background": "none",
                        "border": 0,
                        "boxSizing": "border-box",
                        "display": "block",
                        "height": "initial",
                        "margin": 0,
                        "opacity": 1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "relative",
                        "width": "initial",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "background": "none",
                          "border": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": "initial",
                          "margin": 0,
                          "opacity": 1,
                          "padding": 0,
                          "paddingTop": "50%",
                          "width": "initial",
                        }
                      }
                    />
                    <img
                      alt="image-3-alt-text"
                      data-nimg="responsive"
                      decoding="async"
                      onError={[Function]}
                      onLoad={[Function]}
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style={
                        Object {
                          "border": "none",
                          "bottom": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": 0,
                          "left": 0,
                          "margin": "auto",
                          "maxHeight": "100%",
                          "maxWidth": "100%",
                          "minHeight": "100%",
                          "minWidth": "100%",
                          "objectFit": undefined,
                          "objectPosition": undefined,
                          "padding": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 0,
                        }
                      }
                    />
                    <noscript>
                      <img
                        alt="image-3-alt-text"
                        data-nimg="responsive"
                        decoding="async"
                        loading="lazy"
                        sizes="100vw"
                        src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                        srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                        style={
                          Object {
                            "border": "none",
                            "bottom": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "height": 0,
                            "left": 0,
                            "margin": "auto",
                            "maxHeight": "100%",
                            "maxWidth": "100%",
                            "minHeight": "100%",
                            "minWidth": "100%",
                            "objectFit": undefined,
                            "objectPosition": undefined,
                            "padding": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          }
                        }
                      />
                    </noscript>
                  </span>
                </div>
              </a>
            </div>
          </div>
        </li>
        <li
          className="css-155za0w"
          id="card-grid-item-test-id-4"
        >
          <div
            className="css-pgu20y"
            id="card-test-id-4"
          >
            <div
              className="textBox css-0"
            >
              <h3
                className="chakra-heading css-0"
              >
                <a
                  className="css-0"
                  href="https://www.nypl.org/"
                  onClick={[Function]}
                >
                  Test
                </a>
              </h3>
              <div
                className="details css-0"
              />
            </div>
            <div
              className="css-ys3583"
              id="card-image-test-id-4"
            >
              <a
                aria-label="Test-image"
                className="css-0"
                href="https://www.nypl.org/"
                id="card-image-link-test-id-4"
                onClick={[Function]}
                tabIndex={-1}
              >
                <div
                  className="scout-nextjs-image"
                  id="nextjsImage-card-image-test-id-4"
                >
                  <span
                    style={
                      Object {
                        "background": "none",
                        "border": 0,
                        "boxSizing": "border-box",
                        "display": "block",
                        "height": "initial",
                        "margin": 0,
                        "opacity": 1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "relative",
                        "width": "initial",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "background": "none",
                          "border": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": "initial",
                          "margin": 0,
                          "opacity": 1,
                          "padding": 0,
                          "paddingTop": "50%",
                          "width": "initial",
                        }
                      }
                    />
                    <img
                      alt="image-4-alt-text"
                      data-nimg="responsive"
                      decoding="async"
                      onError={[Function]}
                      onLoad={[Function]}
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style={
                        Object {
                          "border": "none",
                          "bottom": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": 0,
                          "left": 0,
                          "margin": "auto",
                          "maxHeight": "100%",
                          "maxWidth": "100%",
                          "minHeight": "100%",
                          "minWidth": "100%",
                          "objectFit": undefined,
                          "objectPosition": undefined,
                          "padding": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 0,
                        }
                      }
                    />
                    <noscript>
                      <img
                        alt="image-4-alt-text"
                        data-nimg="responsive"
                        decoding="async"
                        loading="lazy"
                        sizes="100vw"
                        src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                        srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                        style={
                          Object {
                            "border": "none",
                            "bottom": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "height": 0,
                            "left": 0,
                            "margin": "auto",
                            "maxHeight": "100%",
                            "maxWidth": "100%",
                            "minHeight": "100%",
                            "minWidth": "100%",
                            "objectFit": undefined,
                            "objectPosition": undefined,
                            "padding": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          }
                        }
                      />
                    </noscript>
                  </span>
                </div>
              </a>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="css-1ktje31"
    >
      <div
        className="css-i2lecr"
      />
    </div>
  </div>
</div>
`;
